feat(v2): complete revamp with XML-based prompts and observability
BREAKING CHANGE: Complete architecture overhaul to V2. V1 code moved to src/v1/ directory.

- Added ReviewSystemPrompt.ts and EnhancementSystemPrompt.ts with generic XML-based instructions
- Implemented Langfuse observability integration for AI tracing and monitoring
- Changed userId format in traces from static to dynamic {repository}-{branch}
- Refactored PromptBuilder to inject project-specific config into base prompts
- Added ObservabilityConfig utility for environment-based Langfuse setup
- Removed session command from CLI (determined unnecessary)
- Switched to code_snippet approach for accurate inline comment placement
- Added docs/ reference and LogicUtils helper instructions to workflow config
- Created comprehensive V2 test suite (37 tests passing)
- Removed outdated V1 unit tests (10 test files)
- Updated .env.example with generic examples and Langfuse configuration
- Genericized all company-specific information in configuration examples
- CLI entry point now uses v2.cli.ts
- Fixed husky deprecated warnings by removing old hook syntax
- Fixed commit validation to support breaking change syntax

Features:
- Generic, reusable base prompts with project-specific YAML config injection
- Better observability with Langfuse for debugging AI decisions
- Autonomous code review workflow with lazy file loading
- Search-first approach: AI must verify code before commenting
- XML-structured prompts for better AI comprehension

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,73 @@
-# Bitbucket Configuration
-BITBUCKET_USERNAME=your-username
-BITBUCKET_TOKEN=your-app-password
-BITBUCKET_BASE_URL=https://your-bitbucket-server.com
+# Yama V2 Environment Variables
+# Copy this file to .env and fill in your actual credentials
 
-# AI Provider Configuration (Optional)
-OPENAI_API_KEY=your-openai-api-key
-ANTHROPIC_API_KEY=your-anthropic-api-key
-GOOGLE_API_KEY=your-google-api-key
+# ============================================================================
+# Bitbucket Configuration (Required)
+# ============================================================================
+BITBUCKET_USERNAME=your.email@company.com
+BITBUCKET_TOKEN=your-http-access-token
+BITBUCKET_BASE_URL=https://bitbucket.company.com
+
+# ============================================================================
+# AI Provider Configuration (Optional - defaults to auto-detection)
+# ============================================================================
+# Uncomment and set if you want to override the config file settings
+# AI_PROVIDER=google-ai
+# AI_MODEL=gemini-2.5-pro
+
+# ============================================================================
+# Google AI Configuration (if using google-ai provider)
+# ============================================================================
+# Get your API key from: https://aistudio.google.com/app/apikey
 GOOGLE_AI_API_KEY=your-google-ai-api-key
 
-# Git Platform Configuration (Optional)
-BITBUCKET_APP_PASSWORD=your-bitbucket-app-password
-GITHUB_TOKEN=your-github-token
-GITLAB_TOKEN=your-gitlab-token
+# ============================================================================
+# Jira Configuration (Optional - only if Jira integration is enabled)
+# ============================================================================
+# JIRA_EMAIL=your-email@company.com
+# JIRA_API_TOKEN=your-jira-api-token
+# JIRA_BASE_URL=https://company.atlassian.net
 
-# Advanced Configuration (Optional)
-YAMA_DEBUG=false
-YAMA_CACHE_TTL=3600
-YAMA_MAX_RETRIES=3
-LOG_LEVEL=info
-CONFIG_PATH=./yama.config.yaml
+# ============================================================================
+# Alternative AI Providers (Optional)
+# ============================================================================
+
+# Anthropic Claude (if using anthropic provider)
+# ANTHROPIC_API_KEY=your-anthropic-api-key
+
+# OpenAI (if using openai provider)
+# OPENAI_API_KEY=your-openai-api-key
+
+# AWS Bedrock (if using bedrock provider)
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your-access-key
+# AWS_SECRET_ACCESS_KEY=your-secret-key
+
+# Azure OpenAI (if using azure provider)
+# AZURE_OPENAI_API_KEY=your-azure-key
+# AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com
+# AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
+
+# ============================================================================
+# Monitoring & Analytics (Optional)
+# ============================================================================
+# LOG_LEVEL=info
+# ANALYTICS_ENABLED=true
+# COST_TRACKING_ENABLED=true
+
+# ============================================================================
+# Langfuse Observability (Optional)
+# ============================================================================
+# Enable LLM tracing and observability with Langfuse
+# Get your keys from: https://cloud.langfuse.com
+# LANGFUSE_PUBLIC_KEY=pk-lf-...
+# LANGFUSE_SECRET_KEY=sk-lf-...
+# LANGFUSE_BASE_URL=https://cloud.langfuse.com
+# LANGFUSE_ENABLED=true
+
+# ============================================================================
+# Performance Tuning (Optional)
+# ============================================================================
+# MAX_CONCURRENT_REVIEWS=3
+# REVIEW_TIMEOUT=15m
+# TOKEN_BUDGET_PER_REVIEW=500000
