fix: resolve MCP tool parameter type error and add configurable initialization timeout
- Fixed pull_request_id parameter type issue by removing 'find-by-branch' string fallback
- Added configurable initializationTimeout option for MCP servers (default: 120000ms)
- Updated MCPServerManager to pass timeout to Bitbucket and Jira MCP servers
- Modified config types and example config to support timeout configuration

Fixes parameter validation error when using --branch flag without --pr

--- a/yama.config.example.yaml
+++ b/yama.config.example.yaml
@@ -40,6 +40,7 @@ ai:
 # Bitbucket MCP is always enabled (hardcoded)
 # Jira MCP can be enabled/disabled here
 mcpServers:
+  initializationTimeout: 120000 # Timeout in milliseconds (120000 = 2 minutes)
   jira:
     enabled: true # Set to false to disable Jira integration
 
