--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ permissions:
   packages: write
   issues: write
   pull-requests: write
+  id-token: write # Required for npm provenance
 
 jobs:
   test:
@@ -41,6 +42,12 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
+      issues: write
+      pull-requests: write
+      id-token: write # Required for OIDC authentication with npm provenance
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -60,6 +67,9 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           cache: "pnpm"
 
+      - name: Upgrade npm for OIDC support
+        run: npm install -g npm@latest
+
       - name: Install dependencies
         run: pnpm install
 
@@ -70,8 +80,7 @@ jobs:
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          HUSKY: "0" # Disable git hooks during automated release commits
 
       - name: Setup Node for GitHub Packages
         uses: actions/setup-node@v4
@@ -88,6 +97,4 @@ jobs:
             echo "✅ Published to GitHub Packages successfully!"
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
